# webviz

./: .dockerignore  .gitignore  PERSISTENCE_ARCHITECTURE.md  PERSISTENCE_DOCUMENTATION_INDEX.md  PERSISTENCE_FINAL_SUMMARY.md  PERSISTENCE_FIXES_SUMMARY.md  PERSISTENCE_FLOW_DIAGRAMS.md  PERSISTENCE_ISSUES.md  PR_DESCRIPTION.md  README.md  SbEmulatorConfig.json  backend.Dockerfile  backend_go.Dockerfile  docker-compose-cosmos-db.yml  docker-compose-prod.yml  docker-compose.e2e.yml  docker-compose.yml  frontend-dev.Dockerfile  frontend-prod.Dockerfile  nginx.Dockerfile  nginx.conf  package-lock.json  package.json  radixconfig.yml  tatusqq
api/: pyproject.toml  start_server.py
api/api/: config.py  main.py
api/api/auth/: auth_helper.py  enforce_logged_in_middleware.py
api/api/routers/: timeseries.py
api/api/schemas/: timeseries.py
api/api/utils/: authenticated_user.py
backend/: README.md  generate_openapi.py  pyproject.toml  requirements.txt  seismic_vds_slice.ipynb  start_server.py
backend/backend/: main.py  shared_middleware.py
backend/backend/auth/: auth_helper.py
backend/backend/fastapi_app/auth/: auth_helper.py
backend/backend/fastapi_app/routers/: timeseries.py
backend/backend/fastapi_app/schemas/: __init__.py  timeseries.py
backend/backend/routers/: explore.py  general.py
backend/backend/routers/dev/: router.py
backend/backend/routers/graph/: router.py
backend/backend/routers/grid/: router.py  schemas.py
backend/backend/routers/inplace_volumetrics/: router.py
backend/backend/routers/observations/: router.py
backend/backend/routers/parameters/: router.py
backend/backend/routers/polygons/: converters.py  router.py
backend/backend/routers/pvt/: router.py
backend/backend/routers/rft/: router.py
backend/backend/routers/seismic/: router.py  schemas.py
backend/backend/routers/surface/: converters.py  router.py  schemas.py
backend/backend/routers/timeseries/: converters.py  router.py
backend/backend/routers/well/: converters.py  router.py
backend/backend/routers/well_completions/: router.py
backend/backend/services/: parameter_correlations.py
backend/backend/services/sumo_access/: _helpers.py  discovery.py  grid_access.py  polygons_access.py  summary_access.py  sumo_explore.py  surface_access.py  surface_types.py  table_access.py
backend/backend/services/surface_query_service/: surface_query_service.py
backend/backend/services/user_session_manager/: _user_session_directory.py  user_session_manager.py
backend/backend/services/utils/: authenticated_user.py
backend/backend/services/vds_access/: vds_access.py
backend/backend/utils/: exception_handlers.py  perf_metrics.py
backend/goaggregate/: go.mod  go.sum  main.go
backend/goaggregate/utils/: structs.go  surface.go  x_ijk2ic.go  x_interp_map_nodes.go  x_point_line_pos.go  x_sucu_ij_from_xy.go  x_surf_get_z_from_ij.go  x_surf_get_z_from_xy.go  x_surf_get_zv_from_xyv.go  x_surf_xyz_from_ij.go  x_vector_info.go
backend/src/: config.py
backend/src/backend/: config.py  shared_middleware.py
backend/src/backend/auth/: auth_helper.py  enforce_logged_in_middleware.py
backend/src/backend/primary/: exceptions.py  main.py  user_session_proxy.py
backend/src/backend/user_session/: inactivity_shutdown.py  main.py
backend/src/backend/utils/: add_process_time_to_server_timing_middleware.py  azure_monitor_setup.py  exception_handlers.py  logging_setup.py  perf_metrics.py
backend/src/fastapi_app/: config.py  main.py
backend/src/fastapi_app/auth/: auth_helper.py  enforce_logged_in_middleware.py
backend/src/fastapi_app/routers/: explore.py  general.py  timeseries.py
backend/src/fastapi_app/schemas/: timeseries.py
backend/src/services/: correlations.py  group_tree_data.py  parameter_correlations.py  service_exceptions.py  summary_vector_statistics.py
backend/src/services/graph_access/: graph_access.py
backend/src/services/mocked_drogon_access/: __init__.py  smda_well_access.py
backend/src/services/oneseismic_access/: vds_access.py  vds_slice_access.py  vds_types.py
backend/src/services/smda_access/: stratigraphy_access.py  types.py  well_access.py
backend/src/services/sumo_access/: __init__.py  _arrow_helpers.py  _field_metadata.py  _helpers.py  _resampling.py  case_access.py  case_inspector.py  dev_sumo_access_test_driver.py  discovery.py  generic_types.py  grid_access.py  group_tree_access.py  inplace_volumetrics_access.py  iteration_inspector.py  observation_access.py  observation_types.py  parameter_access.py  parameter_types.py  polygons_access.py  rft_access.py  rft_types.py  seismic_access.py  seismic_types.py  summary_access.py  summary_types.py  sumo_explore.py  (+11 more)
backend_py/: README.md  pyproject.toml
backend_py/libs/core_utils/: pyproject.toml
backend_py/libs/server_schemas/: pyproject.toml
backend_py/libs/services/: pyproject.toml
backend_py/primary/: Dockerfile  README.md  cosmos-emulator-cert.pem  pyproject.toml
backend_py/primary/primary/: config.py  httpx_client.py  main.py  shared_middleware.py
backend_py/primary/scripts/: seed_e2e_session.py
backend_py/pylint/plugins/: async_suffix_checker.py
backend_py/pyworker_default/: Dockerfile  pyproject.toml
backend_py/pyworker_tables/: Dockerfile  pyproject.toml
backend_py/scripts/: mypy-all.sh  mypy-user-grid3d-ri-all.sh  pylint-all.sh  pylint-user-grid3d-ri-all.sh
backend_py/user_grid3d_ri/: Dockerfile  pyproject.toml  user_grid3d_ri_app.py
backend_py/user_grid3d_ri/user_grid3d_ri/: fastapi_app.py
backend_py/user_grid3d_vtk/: Dockerfile
backend_py/user_grid3d_vtk/user_grid3d_vtk/: fastapi_app.py
backend_py/user_mock/: Dockerfile  pyproject.toml  requirements.txt  user-mock.Dockerfile  user_mock_app.py
backend_py/user_mock/user_mock/: inactivity_shutdown.py  user_mock_app.py
backend_py/worker_mock/: Dockerfile  pyproject.toml
backend_py/worker_mock/worker_mock/: worker_main.py
services/: pyproject.toml
webviz-services/: pyproject.toml
webviz-services/webviz_services/: __init__.py
webviz-services/webviz_services/sumo_access/: case_access.py  sumo_discovery.py
(+5371 files in other folders)
