[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["R&T Equinor", "Ceetron Solutions AS"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
msal = "^1.20.0"
starsessions = "^2.1.1"
redis = "^4.4.2"
pyarrow = "^10.0.1"
python-dotenv = "^0.21.0"
pyjwt = "^2.6.0"
pydantic = "^1.10.4"
numpy = "^1.24.1"
sumo-wrapper-python = {git = "https://github.com/equinor/sumo-wrapper-python.git", rev = "master"}
fmu-sumo = {git = "https://github.com/equinor/fmu-sumo.git", rev = "afb37e944fdf510c68033e11b588ff6f44d7a2b6"}
orjson = "^3.8.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pytest = "^7.2.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120
disable=["no-name-in-module","missing-docstring","too-few-public-methods"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true