[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["R&T Equinor", "Ceetron Solutions AS"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
msal = "^1.20.0"
starsessions = "^2.1.1"
redis = "^4.4.2"
pyarrow = "^10.0.1"
python-dotenv = "^0.21.0"
pyjwt = "^2.6.0"
pydantic = "^1.10.4"
numpy = "^1.24.1"
sumo-wrapper-python = {git = "https://github.com/equinor/sumo-wrapper-python.git", branch = "main"}
fmu-sumo = {git = "https://github.com/equinor/fmu-sumo.git", branch = "main"}
orjson = "^3.8.10"
pandas = "<2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pytest = "^7.2.1"
mypy = "^0.991"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint]
disable = ["missing-docstring", "line-too-long", "logging-fstring-interpolation", "duplicate-code"]
extension-pkg-whitelist = "pydantic"
ignored-modules = "pyarrow.compute"
good-names = ["i", "x", "df"]
min-public-methods = 0
max-args = 7
max-locals = 19
max-branches = 14

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true