[tool.poetry]
name = "services"
version = "0.1.0"
description = ""
authors = ["R&T Equinor", "Ceetron Solutions AS]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120
