[project]
name = "primary"
authors = [{ name = "R&T Equinor" }, { name = "Ceetron Solutions AS" }]
readme = "README.md"
requires-python = "^3.13"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1"
package-mode = false

[tool.poetry.dependencies]
msal = "^1.32.0"
starsessions = "^2.2.1"
redis = "^5.3.1"
python-dotenv = "^1.1.0"
pyjwt = "^2.6.0"

# orjson is installed to allow the use of ORJSONResponse from fastapi
orjson = "^3.8.10"
httpx = "^0.28.1"
azure-monitor-opentelemetry = "^1.6.13"

webviz-core-utils = { path = "../libs/core_utils", develop = true }
webviz-server-schemas = { path = "../libs/server_schemas", develop = true }
webviz-services = { path = "../libs/services", develop = true }
azure-cosmos = "^4.9.0"
nanoid = "^2.0.0"
aiohttp = "^3.11.18"

# Special cases
### These might have breaking changes in minor version
pydantic = "~2.12.0"
fastapi = "~0.129.0"
uvicorn = "~0.41.0"

### Telemetry version will be pinned by `azure-monitor-opentelemetry` 
opentelemetry-instrumentation-httpx = "*"
opentelemetry-instrumentation-redis = "*"

[tool.poetry.group.dev.dependencies]
types-nanoid = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = "ignore::DeprecationWarning:pkg_resources"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
