[project]
name = "user-grid3d-ri"
requires-python = "^3.13"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "~0.129.0"
uvicorn = "~0.41.0"
httpx = "^0.28.1"
psutil = "^7.2.2"
pydantic = "~2.12.0"
numpy = "^2.2.0"
xtgeo = "^4.18.0"
diskcache = "^5.6.3"
aiofiles = "^25.1.0"
azure-storage-blob = { version = "12.28.0", extras = ["aio"] }
python-dotenv = "^1.1.0"
azure-monitor-opentelemetry = "^1.8.6"
opentelemetry-instrumentation-httpx = "*"
opentelemetry-instrumentation-grpc = "*"

# From ResInsight's requirements.txt
protobuf = "^6.33.5"
grpcio = "^1.78.0"

webviz-core-utils = { path = "../libs/core_utils", develop = true }
webviz-server-schemas = { path = "../libs/server_schemas", develop = true }

[tool.poetry.group.dev.dependencies]
types-aiofiles = "^25.1.0.20251011"
types-psutil = "^7.2.2.20260130"
types-grpcio = "^1.0.0.20251009"

