[project]
name = "worker-mock"
version = "0.0.1"
requires-python = "^3.13"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1"
packages = [{ include = "worker_mock", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
azure-servicebus = "^7.14.3"
python-dotenv = "^1.1.0"
azure-monitor-opentelemetry = "^1.8.1"
watchfiles = "^1.1.0"
