[project]
name = "webviz-core-utils"
version = "0.0.1"
requires-python = "^3.11"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1"
packages = [{ include = "webviz_core_utils", from = "src" }]

[tool.poetry.dependencies]
numpy = "^2.2.3"
# Pydantic might have small breaking changes in minor releases
pydantic = "~2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
