[project]
name = "webviz-server-schemas"
version = "0.0.1"
requires-python = "^3.11"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1"
packages = [{ include = "webviz_server_schemas", from = "src" }]

[tool.poetry.dependencies]
pydantic = "^2.11.0"
webviz-core-utils = { path = "../core_utils", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
