[project]
name = "webviz-services"
version = "0.0.1"
requires-python = "^3.13"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1"
packages = [{ include = "webviz_services", from = "src" }]

[tool.poetry.dependencies]
redis = "7.1.1"
pyarrow = "^23.0.1"
numpy = "^2.2.0"
httpx = "^0.28.1"
sumo-wrapper-python = "1.3.0"
pottery = "^3.0.0"
requests-toolbelt = "^1.0.0"
xtgeo = "^4.18.0"
webviz-core-utils = { path = "../core_utils", develop = true }
webviz-server-schemas = { path = "../server_schemas", develop = true }

# These are really dev dependencies, but since dev dependencies are not transitively installed,
# and they are needed for type checking, we put them here instead.
types-redis = "^4.6.0"
pyarrow-stubs = "^20.0.0.20251215"


# Special cases
### These might have breaking changes in minor versions
polars = "~1.38.1"
pydantic = "~2.12.0"

### Might change model fields in minor updates, so pinned for stability 
fmu-datamodels = "0.19.1"
fmu-sumo = "2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
